# soroban-sql-sync

./: .env.example  .gitignore  .tmp_publish_issues.ps1  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE_1_LAUNCH.md  README.md  ROADMAP.md  create-issues.ps1  create-issues.sh
.github/ISSUE_TEMPLATE/: 01-core-architecture.md  02-postgres-schema.md  03-rpc-event-listener.md  04-xdr-decoding.md  05-rest-api.md  06-dashboard-ui.md  07-contract-event-schema.md
.github/workflows/: ci.yml
docs/: event-schema.md
fixtures/event-schema/: sample-events.json
migrations/: 20260417000000_init_schema.sql  README.md
src/: config.rs  main.rs  types.rs
src/api/: errors.rs  handlers.rs  mod.rs
src/contracts/: event_emitter.rs  mod.rs
src/ingest/: decoder.rs  listener.rs  mod.rs
src/storage/: mod.rs  models.rs  repository.rs
test_snapshots/contracts/event_emitter/tests/: emits_approve_event.1.json  emits_mint_event.1.json  emits_swap_event.1.json  emits_transfer_event.1.json
