[package]
name = "soroban-sql-sync"
version = "0.1.0"
edition = "2021"
authors = ["ExcelDsigN-tech"]
description = "A high-performance Soroban event indexer bridging Stellar to PostgreSQL."

[dependencies]
# Async Runtime for high-concurrency
tokio = { version = "1.0", features = ["full"] }

# Database logic (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "json"] }

# Stellar & Soroban SDKs
soroban-sdk = "22.0.0"
stellar-rpc-client = "25.1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
axum = "0.7"
tower = "0.4"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "soroban-sql-sync"
path = "src/main.rs"
